[tool.poetry]
name = "bombe-docs"
version = "0.1.0"
description = ""
authors = ["oalieno <jeffrey6910@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.31"
mkdocs-glightbox = "^0.4.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-git-authors-plugin = "^0.9.0"
mkdocs-git-committers-plugin-2 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
